ci: Add release-please action and linter
On push/merge to main branch the release-please action will be triggered. It first triggers a linter and if it succeeds a release and changlog is generated. For lintin code locally execute the lint-local.sh script.

Use conventional commits from now on.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,8 @@
 				"esbenp.prettier-vscode",
 				"ionic.ionic",
 				"aaron-bond.better-comments",
-				"ionic-preview.ionic-preview"
+				"ionic-preview.ionic-preview",
+				"vivaxy.vscode-conventional-commits"
 			]
 		}
 	}
