--- a/backend/api/Pipfile
+++ b/backend/api/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 fastapi = "*"
 pydantic = "*"
 uvicorn = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
+passlib = {extras = ["bcrypt"], version = "*"}
 
 [dev-packages]
 pylint = "*"
