feat(api): :tada: added login and basic routes

--- a/backend/api/Pipfile
+++ b/backend/api/Pipfile
@@ -9,6 +9,8 @@ pydantic = "*"
 uvicorn = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
 passlib = {extras = ["bcrypt"], version = "*"}
+python-multipart = "*"
+aiofiles = "*"
 
 [dev-packages]
 pylint = "*"
