--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "gen-api-client": "openapi -i http://localhost:8181/openapi.json -o src/_generated/api-client -c axios"
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
@@ -19,9 +20,12 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "axios": "^1.5.1",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "@ionic/pwa-elements": "^3.2.2",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@capacitor/cli": "5.4.2",
@@ -33,6 +37,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "openapi-typescript-codegen": "^0.25.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
