--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,15 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.5.1",
     "ionicons": "^7.0.0",
+    "swiper": "^10.3.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "@ionic/pwa-elements": "^3.2.2",
-    "swiper": "^10.3.1"
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@capacitor/cli": "5.4.2",
