--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.5.1",
+    "form-data": "^4.0.0",
     "ionicons": "^7.0.0",
     "swiper": "^10.3.1",
     "vue": "^3.2.45",
@@ -41,6 +42,7 @@
     "openapi-typescript-codegen": "^0.25.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.6",
     "vitest": "^0.32.2",
     "vue-tsc": "^1.0.24"
   },
