chore(api): serve real user profile img

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,9 +24,7 @@
 			"username": "root"
 		}
 	},
-	//"appPort": ["8100:8100" ], // Finn: Add this line to make pwa port available to local network for testing on mobile
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+	//// "appPort": ["8100:8100" ], // Finn: Add this line to make pwa port available to local network for testing on mobile
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
@@ -47,7 +45,8 @@
 				"ionic-preview.ionic-preview",
 				"vivaxy.vscode-conventional-commits",
 				"ms-python.black-formatter",
-				"ms-vscode.makefile-tools"
+				"ms-vscode.makefile-tools",
+				"ms-python.isort"
 			]
 		}
 	}
