--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.5.1",
     "form-data": "^4.0.0",
     "ionicons": "^7.0.0",
     "swiper": "^10.3.1",
+    "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-cookies": "^1.0.6"
