--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "swiper": "^10.3.1",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6",
     "vue3-cookies": "^1.0.6"
   },
