feat(deploy): :rocket: Created docker deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "conventionalCommits.scopes": [
         "frontend",
         "doc",
-        "api"
+        "api",
+        "deploy"
     ],
     "cSpell.words": [
         "aiofiles",
