feat(deploy): :rocket: Finished docker deployment
Docker container contains: nginx, backend using pipenv and uvicorn and the compiled frontend

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "cwd": "${workspaceFolder}/backend/api",
             "env": {
                 "WEBROOT_PATH": "../../_local_webroot",
-                "LOGGING_LEVEL": "DEBUG"
+                "LOGGING_LEVEL": "DEBUG",
+                "STAGE": "dev",
             },
             "jinja": true,
             "justMyCode": true
