--- a/container-assets/nginx.conf
+++ b/container-assets/nginx.conf
@@ -1,19 +1,11 @@
-# from https://stackoverflow.com/questions/49779575/running-frontend-and-backend-on-the-same-port
-
-user root;
-
-worker_processes 1;
-
 error_log /var/log/nginx/error.log warn;
-
-pid /var/run/nginx.pid;
 
 events {
     # worker_connections 1024;
 }
 
 http {
-    upstream backend {
+    upstream api {
         server localhost:8200;
     }
 
@@ -21,14 +13,17 @@ http {
         listen 80 default_server;
         listen [::]:80 default_server;
         # access_log /var/log/nginx/access.log main;
+        client_max_body_size 4G;
 
         location /api/ {
-            proxy_pass         http://backend;
+            proxy_pass         http://api/;
             proxy_redirect     off;
+            proxy_buffering    off;
             proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_set_header   X-Real-IP $remote_addr;
         }
 
         location / {
