--- a/backend/api/Pipfile
+++ b/backend/api/Pipfile
@@ -11,6 +11,7 @@ python-jose = {extras = ["cryptography"], version = "*"}
 passlib = {extras = ["bcrypt"], version = "*"}
 python-multipart = "*"
 aiofiles = "*"
+inquirerpy = "*"
 
 [dev-packages]
 pylint = "*"
