feat(api): image upload and download

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "deploy"
     ],
     "cSpell.words": [
+        "admintools",
         "aiofiles",
         "devcontainer",
         "fastapi",
