chore(db): add docker network for db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "frontend",
         "doc",
         "api",
-        "deploy"
+        "deploy",
+        "db"
     ],
     "cSpell.words": [
         "admintools",
