--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
+//!!! Make sure that the docker network os-web-db is created (docker network create --driver bridge os-web-db).
 {
 	"name": "Node.js & TypeScript",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
@@ -28,7 +29,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "./.devcontainer/setup.sh",
+	"postCreateCommand": "make setup && sudo apt update && sudo apt install -y dnsutils iputils-ping",
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
@@ -49,7 +50,10 @@
 				"ms-python.isort"
 			]
 		}
-	}
+	},
+	"runArgs": [
+		"--network=cacha-db"
+	]
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
