feat(api): integrate prisma client

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "env": {
                 "LOGGING_LEVEL": "DEBUG",
                 "STAGE": "dev",
+                "DATABASE_URL": "postgresql://postgres:password@os-web-db:5432/mydb?schema=public"
             },
             "jinja": true,
             "justMyCode": true
