--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "fastapi",
         "nginx",
         "oneshot",
-        "pipenv"
+        "pipenv",
+        "prisma"
     ],
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
