--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,7 +47,8 @@
 				"vivaxy.vscode-conventional-commits",
 				"ms-python.black-formatter",
 				"ms-vscode.makefile-tools",
-				"ms-python.isort"
+				"ms-python.isort",
+				"Prisma.prisma"
 			]
 		}
 	},
