feat(api): paginate oneshots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "hashpw",
         "nginx",
         "oneshot",
+        "oneshots",
         "pipenv",
         "postgres",
         "prisma"
