--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,7 @@
             "cwd": "${workspaceFolder}/backend/api",
             "env": {
                 // "LOGGING_LEVEL": "DEBUG",
-                "STAGE": "dev",
-                "DATABASE_URL": "postgresql://postgres:password@os-web-db:5432/osweb?schema=public"
+                "STAGE": "dev"
             },
             "jinja": true,
             "justMyCode": true
@@ -26,8 +25,7 @@
             "cwd": "${workspaceFolder}/backend/api",
             "env": {
                 // "LOGGING_LEVEL": "DEBUG",
-                "STAGE": "dev",
-                "DATABASE_URL": "postgresql://postgres:password@os-web-db:5432/osweb?schema=public"
+                "STAGE": "dev"
             },
             "jinja": true,
             "justMyCode": true
