chore(admtools): metadata importer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
     ],
     "cSpell.words": [
         "admcore",
+        "admdata",
         "admintools",
+        "admservice",
         "aiofiles",
         "devcontainer",
         "fastapi",
