--- a/container-assets/nginx.conf
+++ b/container-assets/nginx.conf
@@ -15,6 +15,13 @@ http {
         # access_log /var/log/nginx/access.log main;
         client_max_body_size 4G;
 
+        # Enable gzip compression.
+        gzip on;
+        gzip_static on;
+        gzip_types      text/plain text/xml text/css text/comma-separated-values text/javascript application/javascript application/json application/x-javascript application/xml;
+        gzip_proxied    no-cache no-store private expired auth;
+        gzip_min_length 1000;
+
         location /api/ {
             proxy_pass         http://api/;
             proxy_redirect     off;
