feat(frontend): build for android and connection to backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
         "pipenv",
         "postgres",
         "prisma",
-        "uvicorn"
+        "uvicorn",
+        "VITE"
     ],
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
