--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "gen-api-client": "openapi -i http://localhost:8200/openapi.json -o src/_generated/api-client -c axios"
   },
   "dependencies": {
+    "@capacitor/android": "5.4.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.4.2",
