--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "5.4.2",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
