style(frontend): :art: added prettier and formated and linted codebase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,13 +46,13 @@
     },
     //disable format on safe for all that is handled by eslint
     "[vue]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[typescript]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[javascript]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "eslint.validate": [
         "typescript",
