--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint",
+    "lint": "eslint src --fix",
     "gen-api-client": "openapi -i http://localhost:8200/openapi.json -o src/_generated/api-client -c axios"
   },
   "dependencies": {
@@ -45,9 +45,10 @@
     "@vue/test-utils": "^2.3.0",
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-vue": "^9.20.1",
     "jsdom": "^22.1.0",
     "openapi-typescript-codegen": "^0.25.0",
+    "prettier": "3.2.4",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vite-plugin-pwa": "^0.16.6",
