--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "api",
         "deploy",
         "db",
-        "admtools"
+        "admtools",
+        "android"
     ],
     "cSpell.words": [
         "admcore",
