--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
-    "cypress": "^12.7.0",
+    "cypress": "^13.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.20.1",
     "jsdom": "^22.1.0",
@@ -54,5 +54,5 @@
     "vitest": "^0.32.2",
     "vue-tsc": "^1.0.24"
   },
-  "description": "An Ionic project"
+  "description": "A simple but private photo diary app"
 }
