--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -78,6 +78,8 @@ jobs:
     if: ${{ needs.release-please.outputs.release_created }}
     name: Build APK
     runs-on: ubuntu-latest
+    env:
+      tag_name: ${{ needs.release-please.outputs.tag_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -96,6 +98,9 @@ jobs:
           distribution: "adopt"
           java-version: "17"
 
+      # - name: Setup Android SDK
+      #   uses: android-actions/setup-android@v3
+
       - name: Build APK
         run: |
           cd frontend/android
@@ -111,8 +116,8 @@ jobs:
       #     jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore your-key.keystore -storepass your-storepass -keypass your-keypass ${{ github.workspace }}/app-release-unsigned.apk your-alias
       #     zipalign -v 4 ${{ github.workspace }}/app-release-unsigned.apk app-release-signed.apk
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release-unsigned
-          path: app-release-unsigned.apk
+      - name: Upload APK
+        id: upload
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ env.tag_name }} app-release-unsigned.apk
