chore(doc): :memo: updated docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "nginx",
         "oneshot",
         "oneshots",
+        "pinia",
         "pipenv",
         "postgres",
         "prisma",
