feat(appflow): setup appflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "deploy",
         "db",
         "admtools",
-        "android"
+        "android",
+        "appflow"
     ],
     "cSpell.words": [
         "admcore",
